When listing, show handle as id
